deploy/apps/structarray-search/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: structarray-search
  namespace: demo
  labels:
    app.kubernetes.io/name: structarray-search
    app.kubernetes.io/part-of: milvus-demo
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: milvus-io
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  ingressClassName: alb
  rules:
  - host: demos.milvus.io
    http:
      paths:
      - path: /structarray-search
        pathType: Prefix
        backend:
          service:
            name: structarray-search-svc
            port:
              number: 48030
  tls:
  - hosts:
    - demos.milvus.io
